# llm-scripture-fidelity

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
docs/: DEPLOY.md  RESEARCH_API.md
examples/: research-run-request.json
schemas/: research-run-request.schema.json  research-run-response.schema.json
scripts/: export_api_schemas.py
scripture_fidelity/: __init__.py  __main__.py  api.py  cli.py  config.py  export.py  prompts.py  provenance.py  references.py  runner.py  scoring.py  solvers.py  task.py
scripture_fidelity/bible/: __init__.py  ao_lab.py  api_bible.py  base.py  cache.py  esv.py  helloao.py  service.py  youversion.py
scripture_fidelity/report/: __init__.py  cli_report.py  data.py  html_report.py  template.html
tests/: conftest.py  test_api.py  test_api_schemas.py  test_config.py  test_esv.py  test_export.py  test_output_buffer.py  test_references.py  test_scoring.py
