[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scripture-fidelity"
version = "0.1.0"
description = "Study of methods for LLMs to quote Scripture with high fidelity"
requires-python = ">=3.10"
dependencies = [
    "inspect-ai>=0.3.90",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.9",
    "rich>=13.7",
    "jinja2>=3.1",
    "openai>=1.40",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "xai-sdk>=1.4",
    "parallel-web>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]

[project.scripts]
scripture-fidelity = "scripture_fidelity.cli:main"
scripture-fidelity-serve = "scripture_fidelity.api:serve"

[tool.setuptools.packages.find]
include = ["scripture_fidelity*"]

[tool.setuptools.package-data]
scripture_fidelity = ["report/template.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
